--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <html>
-    <head>
+  <head>
+    <title>Change the color of the background with a click</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-    </head>
-   
-    <body>
-        <nav>
-            <div>
-                <ul>
-                    <li>Color Flipper</li>
-                    <li>Simple</li>
-                    <li>Hex</li>
-                </ul>
-            </div>
-        </nav>
+  <body>
+    <header>
+      <nav>
+        <ul class="nav_links">
+          <li><a href="#">Sequence</a></li>
+          <li><a href="random.html">Random</a></li>
+        </ul>
+      </nav>
+      <!--<button><a href="contact.html" class="cta">Contact Us</a></button>  -->
+    </header>
 
-        <main>
-            <div class="container">
-                <h2>Background Color: <span class="color"></span></h2>
-                <div class="btn"><button>Click Me</button></div>
-            </div>
-        </main>
-
-    </body>
+    <main>
+      <div class="container">
+        <img class="logo" src="C:\Users\Lenovo\Documents\Git Projects\changeColorsPage\logo.jpg" alt="logo" />
+        <h2>Background Color: <span class="color"></span></h2>
+        <div class="btn"><button>Click Me</button></div>
+      </div>
+    </main>
+  </body>
 </html>
