--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Change the color of the background with a click</title>
     <link rel="stylesheet" href="style.css" />
+
   </head>
 
   <body>
@@ -17,10 +18,12 @@
 
     <main>
       <div class="container">
-        <img class="logo" src="C:\Users\Lenovo\Documents\Git Projects\changeColorsPage\logo.jpg" alt="logo" />
+        <img class="logo" src="C:\Users\Lenovo\Documents\Git Projects\changeColorsPage\logo.png" alt="logo" />
         <h2>Background Color: <span class="color"></span></h2>
-        <div class="btn"><button>Click Me</button></div>
+        <div class="btn"><button id="button_click">Click Me</button></div>
       </div>
     </main>
+
+    <script src="scripts.js"></script>
   </body>
 </html>
