--- a/random.html
+++ b/random.html
@@ -9,8 +9,8 @@
     <header>
       <nav>
         <ul class="nav_links">
-          <li><a href="#">Sequence</a></li>
-          <li><a href="random.html">Random</a></li>
+          <li><a href="index.html">Sequence</a></li>
+          <li><a href="#">Random</a></li>
         </ul>
       </nav>
       <!--<button><a href="contact.html" class="cta">Contact Us</a></button>  -->
@@ -24,6 +24,6 @@
       </div>
     </main>
 
-    <script src="Sequence.js"></script>
+    <script src="random.js"></script>
   </body>
 </html>
